add flyer to link showing

--- a/frontend/event-booking-system/public/index.html
+++ b/frontend/event-booking-system/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Wiesenwahn</title>
+    <meta property="og:title" content="Wiesenwahn" />
+    <meta property="og:image" content="%PUBLIC_URL%/flyer.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
