update favicon and card image

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,7 +13,7 @@
 
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Wiesenwahn" />
-    <meta property="og:description" content="5 Jahre Weiher Wald und Wiesenwahn. Sei dabei!" />
+    <meta property="og:description" content="Weiher Wald und Weltall Wahn. Sei dabei!" />
     <meta property="og:image" content="https://wiesenwahn.de/flyer.png" />
     <meta property="og:url" content="https://wiesenwahn.de" />
     <meta property="og:type" content="website" />
@@ -21,7 +21,7 @@
     <!-- Twitter Card tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Wiesenwahn">
-    <meta name="twitter:description" content="5 Jahre Weiher Wald und Wiesenwahn. Sei dabei!">
+    <meta name="twitter:description" content="Weiher Wald und Weltall Wahn. Sei dabei!">
     <meta name="twitter:image" content="https://wiesenwahn.de/flyer.png">
   </head>
   <body>
